re PR tree-optimization/24117 (struct is not marked fully as call clobbered)

2005-09-29  Daniel Berlin  <dberlin@dberlin.org>

	Fix PR tree-optimization/24117
	* tree-ssa-structalias.c (find_func_aliases): Strip nops
	before considering whether to use anyoffset.

From-SVN: r104791