gcc/tree-ssa-structalias.c
@@ -2817,16 +2817,18 @@ find_func_aliases (tree t, struct alias_info *ai)
 		  case tcc_expression:
 		  case tcc_unary:
 		      {
+			tree anyoffsetrhs = rhsop;
 			bool need_anyoffset = false;
 			rhs = get_constraint_for (rhsop, &need_anyoffset);
 			process_constraint (new_constraint (lhs, rhs));
-
+			
+			STRIP_NOPS (anyoffsetrhs);
 			/* When taking the address of an aggregate
 			   type, from the LHS we can access any field
 			   of the RHS.  */
 			if (need_anyoffset || (rhs.type == ADDRESSOF
 			    && !(get_varinfo (rhs.var)->is_special_var)
-			    && AGGREGATE_TYPE_P (TREE_TYPE (TREE_TYPE (rhsop)))))
+			    && AGGREGATE_TYPE_P (TREE_TYPE (TREE_TYPE (anyoffsetrhs)))))
 			  {
 			    rhs.var = anyoffset_id;
 			    rhs.type = ADDRESSOF;
